--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "axios": "^0.26.1",
+    "lodash": "^4.17.21",
+    "qs": "^6.10.3",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.21"
